--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -113,6 +113,8 @@
         "sepia": "Сепия",
         "dark": "Тёмный"
       },
+      "loading": "Загружаем книгу…",
+      "loadError": "Не удалось показать книгу. Попробуйте скачать её.",
       "demoNotice": "Демо-отрывок для знакомства с книгой.",
       "unknownAuthor": "неизвестным автором",
       "sampleIntro": "Отрывок из книги «{{title}}», написанной {{author}}.",
