chore: edit styles
# Conflicts:
#	src/pages/MyAccount/MyAccount.tsx

--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -23,7 +23,7 @@
     }
   },
   "footer": {
-    "languageLabel": "Language",
+    "languageLabel": "Language to",
     "contact": "Contact",
     "themeToggleLabel": "Switch to {{mode}}",
     "theme": {
