--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -23,7 +23,7 @@
     }
   },
   "footer": {
-    "languageLabel": "Язык интерфейса"
+    "languageLabel": "Язык интерфейса на"
   },
   "errors": {
     "genericTitle": "Что-то пошло не так",
