--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -52,6 +52,11 @@
     "emptyTitle": "Nothing found",
     "emptyDescription": "Try changing the query"
   },
+  "globalCategories": {
+    "article": "Articles",
+    "book": "Books",
+    "comics": "Comics"
+  },
   "filters": {
     "searchPlaceholder": "Search books",
     "sort": {
@@ -239,6 +244,10 @@
           "label": "Author",
           "placeholder": "Enter the author name"
         },
+        "globalCategory": {
+          "label": "Global category",
+          "placeholder": "Select the global category"
+        },
         "category": {
           "label": "Category",
           "placeholder": "Select the genre or collection"
@@ -278,6 +287,7 @@
       "toastError": "Failed to submit the book. Try again later.",
       "toastMissingFile": "Attach the PDF file before submitting.",
       "toastMissingCover": "Add a cover image.",
+      "toastMissingGlobalCategory": "Choose the global category.",
       "toastMissingCategory": "Choose a category for the book.",
       "toastMissingPrice": "Set the price in Stars.",
       "toastInvalidPrice": "Enter a non-negative number of Stars.",
@@ -331,6 +341,7 @@
         "description": "Description",
         "files": "Submitted files"
       },
+      "globalCategory": "Global category",
       "category": "Category",
       "price": "Price",
       "hashtags": "Hashtags",
