--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -199,7 +199,7 @@
   "globalCategories": {
     "article": "Статьи",
     "book": "Книги",
-    "comic": "Комиксы"
+    "comics": "Комиксы"
   },
   "account": {
     "title": "Личный кабинет",
@@ -253,6 +253,10 @@
         "category": {
           "label": "Категория",
           "placeholder": "Выберите жанр или подборку"
+        },
+        "free": {
+          "label": "Бесплатно?",
+          "hint": "Читатели получат доступ бесплатно."
         },
         "price": {
           "label": "Цена в Stars ⭐",
