--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -216,18 +216,26 @@
       "tonBadge": "TON NFT",
       "status": {
         "owned": "Владею",
-        "listed": "Выставлена на продажу"
+        "listed": "Выставлена на продажу",
+        "liked": "Понравилась"
       },
       "purchased": "Покупка от {{value}}",
       "paymentId": "ID платежа {{id}}",
       "loading": "Загружаем ваши книги...",
       "empty": "Вы ещё не приобретали книги.",
+      "emptyLiked": "Вы ещё не поставили лайк ни одной книге.",
       "loadError": "Не удалось загрузить вашу полку.",
       "retry": "Повторить",
+      "filters": {
+        "purchased": "Купленные",
+        "liked": "Понравившиеся"
+      },
       "actions": {
         "read": "Читать",
         "download": "Скачать"
       },
+      "like": "Поставить лайк книге «{{title}}»",
+      "unlike": "Убрать лайк с книги «{{title}}»",
       "toast": {
         "missingFile": "Ссылка на файл ещё готовится. Попробуйте позже.",
         "downloadError": "Не удалось скачать книгу. Повторите попытку позже."
