--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -294,7 +294,65 @@
           "placeholder": "No file selected"
         },
         "submit": "Submit for review",
-        "notice": "Upload to secure decentralized storage can take 10s+."
+        "notice": "Upload to secure decentralized storage can take 10s+.",
+        "quoteCarousel": {
+          "labels": {
+            "english": "English",
+            "russian": "Russian"
+          },
+          "sections": [
+            {
+              "title": "🟦 Plato — 5 verified quotes",
+              "quotes": [
+                {
+                  "english": "\u201cThe beginning is the most important part of the work.\u201d",
+                  "russian": "\u00ab\u041d\u0430\u0447\u0430\u043b\u043e \u2014 \u0441\u0430\u043c\u0430\u044f \u0432\u0430\u0436\u043d\u0430\u044f \u0447\u0430\u0441\u0442\u044c \u0440\u0430\u0431\u043e\u0442\u044b.\u00bb"
+                },
+                {
+                  "english": "\u201cOpinion is the medium between knowledge and ignorance.\u201d",
+                  "russian": "\u00ab\u041c\u043d\u0435\u043d\u0438\u0435 \u2014 \u044d\u0442\u043e \u043d\u0435\u0447\u0442\u043e \u0441\u0440\u0435\u0434\u043d\u0435\u0435 \u043c\u0435\u0436\u0434\u0443 \u0437\u043d\u0430\u043d\u0438\u0435\u043c \u0438 \u043d\u0435\u0432\u0435\u0436\u0435\u0441\u0442\u0432\u043e\u043c.\u00bb"
+                },
+                {
+                  "english": "\u201cThe measure of a man is what he does with power.\u201d",
+                  "russian": "\u00ab\u041c\u0435\u0440\u0443 \u0447\u0435\u043b\u043e\u0432\u0435\u043a\u0430 \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u044f\u0435\u0442 \u0442\u043e, \u043a\u0430\u043a \u043e\u043d \u0440\u0430\u0441\u043f\u043e\u0440\u044f\u0436\u0430\u0435\u0442\u0441\u044f \u0432\u043b\u0430\u0441\u0442\u044c\u044e.\u00bb"
+                },
+                {
+                  "english": "\u201cKnowledge becomes evil if the aim be not virtuous.\u201d",
+                  "russian": "\u00ab\u0417\u043d\u0430\u043d\u0438\u0435 \u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0441\u044f \u0437\u043b\u043e\u043c, \u0435\u0441\u043b\u0438 \u0446\u0435\u043b\u044c \u0435\u0433\u043e \u043f\u0440\u0438\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u043d\u0435 \u0434\u043e\u0431\u0440\u043e\u0434\u0435\u0442\u0435\u043b\u044c\u043d\u0430.\u00bb"
+                },
+                {
+                  "english": "\u201cBe kind, for everyone you meet is fighting a hard battle.\u201d",
+                  "russian": "\u00ab\u0411\u0443\u0434\u044c \u0434\u043e\u0431\u0440\u044b\u043c, \u0432\u0435\u0434\u044c \u043a\u0430\u0436\u0434\u044b\u0439, \u043a\u043e\u0433\u043e \u0442\u044b \u0432\u0441\u0442\u0440\u0435\u0447\u0430\u0435\u0448\u044c, \u0432\u0435\u0434\u0451\u0442 \u0442\u0440\u0443\u0434\u043d\u0443\u044e \u0431\u043e\u0440\u044c\u0431\u0443.\u00bb"
+                }
+              ]
+            },
+            {
+              "title": "🟩 Aristotle — 5 verified quotes",
+              "quotes": [
+                {
+                  "english": "\u201cThe whole is greater than the sum of its parts.\u201d",
+                  "russian": "\u00ab\u0426\u0435\u043b\u043e\u0435 \u0431\u043e\u043b\u044c\u0448\u0435 \u0441\u0443\u043c\u043c\u044b \u0441\u0432\u043e\u0438\u0445 \u0447\u0430\u0441\u0442\u0435\u0439.\u00bb"
+                },
+                {
+                  "english": "\u201cKnowing yourself is the beginning of all wisdom.\u201d",
+                  "russian": "\u00ab\u041f\u043e\u0437\u043d\u0430\u0442\u044c \u0441\u0435\u0431\u044f \u2014 \u043d\u0430\u0447\u0430\u043b\u043e \u0432\u0441\u044f\u043a\u043e\u0439 \u043c\u0443\u0434\u0440\u043e\u0441\u0442\u0438.\u00bb"
+                },
+                {
+                  "english": "\u201cWe are what we repeatedly do. Excellence, then, is not an act but a habit.\u201d",
+                  "russian": "\u00ab\u041c\u044b \u2014 \u0442\u043e, \u0447\u0442\u043e \u043c\u044b \u043f\u043e\u0441\u0442\u043e\u044f\u043d\u043d\u043e \u0434\u0435\u043b\u0430\u0435\u043c. \u0421\u043e\u0432\u0435\u0440\u0448\u0435\u043d\u0441\u0442\u0432\u043e, \u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e, \u043d\u0435 \u043f\u043e\u0441\u0442\u0443\u043f\u043e\u043a, \u0430 \u043f\u0440\u0438\u0432\u044b\u0447\u043a\u0430.\u00bb"
+                },
+                {
+                  "english": "\u201cHappiness depends upon ourselves.\u201d",
+                  "russian": "\u00ab\u0421\u0447\u0430\u0441\u0442\u044c\u0435 \u0437\u0430\u0432\u0438\u0441\u0438\u0442 \u043e\u0442 \u043d\u0430\u0441 \u0441\u0430\u043c\u0438\u0445.\u00bb"
+                },
+                {
+                  "english": "\u201cThe more you know, the more you realize you don\u2019t know.\u201d",
+                  "russian": "\u00ab\u0427\u0435\u043c \u0431\u043e\u043b\u044c\u0448\u0435 \u0437\u043d\u0430\u0435\u0448\u044c, \u0442\u0435\u043c \u0431\u043e\u043b\u044c\u0448\u0435 \u043f\u043e\u043d\u0438\u043c\u0430\u0435\u0448\u044c, \u0447\u0442\u043e \u043d\u0438\u0447\u0435\u0433\u043e \u043d\u0435 \u0437\u043d\u0430\u0435\u0448\u044c.\u00bb"
+                }
+              ]
+            }
+          ]
+        }
       },
       "toastSuccess": "Book \"{{title}}\" submitted for review.",
       "toastFallbackTitle": "your book",
