--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -296,13 +296,9 @@
         "submit": "Отправить на модерацию",
         "notice": "Рукопись будет загружена в децентрализированое хранилище Walrus через наш сервер.",
         "quoteCarousel": {
-          "labels": {
-            "english": "Английский",
-            "russian": "Русский"
-          },
           "sections": [
             {
-              "title": "🟦 Платон — 5 достоверных цитат",
+              "title": "Платон",
               "quotes": [
                 {
                   "english": "\u201cThe beginning is the most important part of the work.\u201d",
@@ -327,7 +323,7 @@
               ]
             },
             {
-              "title": "🟩 Аристотель — 5 достоверных цитат",
+              "title": "Аристотель",
               "quotes": [
                 {
                   "english": "\u201cThe whole is greater than the sum of its parts.\u201d",
