--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -102,7 +102,9 @@
       "buy": "Купить",
       "subscribe": "Подписаться",
       "preview": "Читать первые 50 страниц",
-      "confirm": "Оформить"
+      "confirm": "Оформить",
+      "like": "Поставить лайк «{{title}}»",
+      "unlike": "Убрать лайк с «{{title}}»"
     },
     "reader": {
       "title": "Режим чтения",
