chore: edit styles
# Conflicts:
#	src/pages/Reader/ReaderPage.tsx

--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -293,8 +293,8 @@
           "placeholder": "No image selected"
         },
         "file": {
-          "label": "PDF file",
-          "cta": "Upload .pdf",
+          "label": "EPUB file",
+          "cta": "Upload .epub",
           "placeholder": "No file selected"
         },
         "submit": "Submit for review",
