--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -90,6 +90,11 @@
     "similarSection": "Похожие книги",
     "similarEmptyTitle": "Пока нечего посоветовать",
     "similarEmptyDescription": "Мы работаем над рекомендациями",
+    "audiobook": {
+      "title": "Аудиокнига",
+      "locked": "Купите книгу, чтобы слушать аудиоверсию.",
+      "audioUnsupported": "Ваш браузер не поддерживает воспроизведение аудио."
+    },
     "subscribeDescription": "Подписка откроет доступ к новым релизам и этой книге.",
     "buyDescription": "Вы получите полный доступ к книге после оформления покупки.",
     "modalTitle": {
@@ -293,6 +298,12 @@
           "cta": "Загрузить изображение",
           "placeholder": "Изображение не выбрано"
         },
+        "audiobook": {
+          "label": "Аудиокнига (необязательно)",
+          "cta": "Загрузить аудио",
+          "placeholder": "Аудиофайл не выбран",
+          "hint": "MP3, WAV или M4A до 25 МБ"
+        },
         "file": {
           "label": "PDF-файл",
           "cta": "Загрузить .pdf",
@@ -429,9 +440,12 @@
       "updated": "Обновлена {{value}}",
       "manuscript": "Рукопись",
       "cover": "Обложка",
+      "audiobook": "Аудиокнига",
       "download": "Скачать рукопись",
       "noDownload": "Файл хранится в децентрализованном хранилище Walrus",
-      "noCover": "Файл обложки недоступен"
+      "noCover": "Файл обложки недоступен",
+      "noAudiobook": "Аудиоверсия не прикладывалась.",
+      "audioUnsupported": "Ваш браузер не поддерживает воспроизведение аудио."
     }
   }
 }
