--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -93,7 +93,8 @@
     "audiobook": {
       "title": "Аудиокнига",
       "locked": "Купите книгу, чтобы слушать аудиоверсию.",
-      "audioUnsupported": "Ваш браузер не поддерживает воспроизведение аудио."
+      "audioUnsupported": "Ваш браузер не поддерживает воспроизведение аудио.",
+      "listenPrompt": "Откройте плеер, чтобы продолжить слушать аудиокнигу."
     },
     "subscribeDescription": "Подписка откроет доступ к новым релизам и этой книге.",
     "buyDescription": "Вы получите полный доступ к книге после оформления покупки.",
@@ -106,6 +107,7 @@
       "download": "Скачать",
       "buy": "Купить",
       "subscribe": "Подписаться",
+      "listen": "Слушать",
       "preview": "Читать первые 50 страниц",
       "confirm": "Оформить",
       "like": "Поставить лайк «{{title}}»",
@@ -141,7 +143,14 @@
       "paymentCancelled": "Оплата отменена",
       "paymentFailed": "Оплата не прошла",
       "readAccessRequired": "Купите книгу, чтобы прочитать её.",
+      "listenAccessRequired": "Купите книгу, чтобы слушать аудиоверсию.",
       "downloadFailed": "Не удалось загрузить файл книги. Попробуйте позже."
+    },
+    "listen": {
+      "title": "Слушать аудиокнигу",
+      "back": "Назад",
+      "unavailable": "Не удалось найти аудиоверсию этой книги.",
+      "unsupported": "Ваш браузер не поддерживает воспроизведение аудио."
     },
     "purchase": {
       "statusTitle": "Детали покупки",
@@ -442,10 +451,12 @@
       "cover": "Обложка",
       "audiobook": "Аудиокнига",
       "download": "Скачать рукопись",
+      "read": "Читать в читалке",
+      "listen": "Слушать в приложении",
       "noDownload": "Файл хранится в децентрализованном хранилище Walrus",
       "noCover": "Файл обложки недоступен",
       "noAudiobook": "Аудиоверсия не прикладывалась.",
-      "audioUnsupported": "Ваш браузер не поддерживает воспроизведение аудио."
+      "audiobookAvailable": "К заявке прикреплена аудиоверсия."
     }
   }
 }
