--- a/src/shared/config/i18n/locales/en/translation.json
+++ b/src/shared/config/i18n/locales/en/translation.json
@@ -45,6 +45,7 @@
   },
   "homeCategories": {
     "title": "Categories",
+    "comingSoon": "Coming Soon",
     "searchPlaceholder": "Search categories",
     "alphaBanner": {
       "title": "Alpha version",
