--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -39,6 +39,7 @@
   },
   "homeCategories": {
     "title": "Категории",
+    "comingSoon": "Скоро появиться",
     "searchPlaceholder": "Поиск по категориям",
     "alphaBanner": {
       "title": "Альфа-версия",
