--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -95,7 +95,8 @@
       "title": "Аудиокнига",
       "locked": "Купите книгу, чтобы слушать аудиоверсию.",
       "audioUnsupported": "Ваш браузер не поддерживает воспроизведение аудио.",
-      "listenPrompt": "Откройте плеер, чтобы продолжить слушать аудиокнигу."
+      "listenPrompt": "Откройте плеер, чтобы продолжить слушать аудиокнигу.",
+      "badge": "Есть аудиоверсия"
     },
     "subscribeDescription": "Подписка откроет доступ к новым релизам и этой книге.",
     "buyDescription": "Вы получите полный доступ к книге после оформления покупки.",
@@ -109,7 +110,8 @@
       "buy": "Купить",
       "subscribe": "Подписаться",
       "listen": "Слушать",
-      "preview": "Читать первые 50 страниц",
+      "preview": "Прочитать фрагмент",
+      "previewAudio": "Прослушать отрывок",
       "confirm": "Оформить",
       "like": "Поставить лайк «{{title}}»",
       "unlike": "Убрать лайк с «{{title}}»"
@@ -151,7 +153,8 @@
       "title": "Слушать аудиокнигу",
       "back": "Назад",
       "unavailable": "Не удалось найти аудиоверсию этой книги.",
-      "unsupported": "Ваш браузер не поддерживает воспроизведение аудио."
+      "unsupported": "Ваш браузер не поддерживает воспроизведение аудио.",
+      "speed": "Скорость"
     },
     "purchase": {
       "statusTitle": "Детали покупки",
