--- a/src/shared/config/i18n/locales/ru/translation.json
+++ b/src/shared/config/i18n/locales/ru/translation.json
@@ -61,6 +61,22 @@
       "new": "Новинки"
     }
   },
+  "search": {
+    "title": "Поиск",
+    "placeholder": "Искать книги и категории",
+    "error": "Не удалось выполнить поиск",
+    "empty": {
+      "title": "Начните вводить запрос",
+      "description": "Мы покажем подходящие книги и категории"
+    },
+    "results": {
+      "categories": "Категории",
+      "books": "Книги",
+      "noCategories": "Нет категорий по этому запросу",
+      "noBooks": "Нет книг по этому запросу",
+      "adjustQuery": "Попробуйте изменить запрос"
+    }
+  },
   "categoryBooks": {
     "emptyDescription": "Измените фильтры или попробуйте другой запрос"
   },
@@ -75,6 +91,7 @@
     "download": "Скачать",
     "buy": "Купить",
     "subscribe": "Подписаться",
+    "search": "Поиск",
     "collapse": "Свернуть",
     "expand": "Показать больше",
     "confirm": "Оформить",
